# image-classification-exam

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: dataset.py  predictor.py  run.py
